# platform

./: .Dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.local.yaml  docker-compose.template.yaml  docker-compose.yaml  entrypoint.sh  host.conf  host.local.conf  pyproject.toml  requests.http  requirements.txt
.github/: issue_template.md  pull_request_template.md
.github/workflows/: blog_workflow.yaml  platform_workflow.yaml
api/: permissions.py  serializers.py  urls.py  views.py
blog/: context_processors.py  errors.py  handlers.py  settings.py  urls.py
flatpages/: texts.py  urls.py  views.py
notes/: admin.py  forms.py  models.py  permissions.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_rename_comment_notecomment.py  0003_alter_notecomment_author.py
posts/: admin.py  forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_preview.py  0003_auto_20210805_2221.py
templates/: base.html
templates/flatpages/: about.html
templates/include/: comment_card.html  comment_form.html  comments.html  footer.html  icons.html  menu.html  nav.html  note_card.html  note_comments.html  paginator.html  post_card.html  post_card_preview.html  post_comments.html  sidebar.html
templates/misc/: 403.html  404.html  500.html
templates/notes/: comment_confirm_delete.html  new.html  note.html  note_confirm_delete.html  notes.html
templates/posts/: comment_confirm_delete.html  new.html  post.html  post_confirm_delete.html  posts.html
users/: admin.py  forms.py  models.py  views.py
(+12 files in other folders)
